k8s/deployment-delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
      - name: delivery-container
        image: selikakanajmi/delivery-service:latest
        ports:
        - containerPort: 8086
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
