k8s/deployment-shipment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipment
  template:
    metadata:
      labels:
        app: shipment
    spec:
      containers:
      - name: shipment-container
        image: selikakanajmi/shipment-service:latest
        ports:
        - containerPort: 8085
