k8s/deployment-warehouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse
  template:
    metadata:
      labels:
        app: warehouse
    spec:
      containers:
        - name: warehouse
          image: YOUR_DOCKERHUB/warehouse-service:latest
          ports:
            - containerPort: 8084
