k8s/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
      nodePort: 30086
  type: NodePort
