k8s/pickup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pickup-service
spec:
  selector:
    app: pickup
  ports:
    - port: 8089
      targetPort: 8089
  type: ClusterIP
