k8s/shipment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipment-service
spec:
  selector:
    app: shipment
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
      nodePort: 30085
  type: NodePort
