k8s/warehouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
spec:
  selector:
    app: warehouse
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
